<resources>
    <string name="app_name">Intern_3days_Hackathon</string>
    <string name="search_view">検索画面</string>
    <string name="event_list_view">イベント一覧</string>
    <string name="event_list_view_detail">イベント詳細</string>
    <string name="search">検索</string>
    <string name="search_comment">キーワードを入力してください</string>

    <string name="event_address">開催地:</string>
    <string name="search_tab">一覧</string>
    <string name="saved_event_tab">保存済みイベント</string>
    <string name="user_tab">ユーザー</string>
    <string name="user_name">ユーザー名</string>
    <string name="favorite_words">お気に入りword</string>
    <string name="not_registered">未登録</string>
    <string name="my_page_url">マイページURL</string>
    <string name="update">更新</string>
    <string name="accept">はい</string>
    <string name="saved_event">保存済みイベント</string>
    <string name="user_settings">ユーザー設定</string>
    <string name="cancel">キャンセル</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="category_name_kotlin">Kotlin</string>
    <string name="category_name_python">Python</string>
    <string name="category_name_swift">Swift</string>
</resources>
